fin partie 2 & 3